# lorecon

./: .gitattributes  .gitignore  API_REFERENCE.md  ARCHITECTURE_REFACTOR_NOV11.md  BRANCH_PLAN.md  BUGFIX_SUMMARY.md  CFP.md  CHANGELOG.md  CHANGELOG_NOV11.md  CLAUDE.md  CLEANUP_COMPLETE.md  CODE_CLEANUP_OCT9_2025.md  CONTRIBUTING.md  DEEP_DIVE_PROMPT.md  DOCUMENTATION_INDEX.md  DOC_CLEANUP_SUMMARY.md  FINAL_CLEANUP_PLAN.md  GETTING_STARTED.md  GIT_COMMIT_SUMMARY.md  HANDOFF.md  IMPLEMENTATION_SUMMARY.md  IMPROVEMENT_PLAN.md  INTEGRATION_CHECKLIST.md  LICENSE  MESHTASTIC_SECURITY_ANALYSIS.md  NEW_CHAT_PROMPT.md  NEW_SESSION_PROMPT.md  NEXT_SESSION_PROMPT.md  OFFENSIVE_TESTING_IMPLEMENTATION_PLAN.md  OLED_QUICK_TEST.md  PACKET_RECEPTION_HANDOFF.md  PARSING_FIXES_SUMMARY.md  PHONE_APP_GUIDE.md  PROJECT_COMPLETE.md  QUICKSTART.md  QUICK_TEST_INSTRUCTIONS.md  README.md  REPO_ANALYSIS_REPORT.md  ROADMAP.md  SECURITY.md  (+24 more)
.claude/: settings.local.json
.github/: copilot-instructions.md
archive_old_sessions/: NEXT_SESSION_BRIEF.md  SESSION_HANDOFF.md  SESSION_HANDOFF_OLD.md  TOMORROW_START_HERE.md
conference/: ETHICAL_TESTING_GUIDELINES.md  OFFENSIVE_TESTING_COMPLETE_GUIDE.md  README.md  SESSION_KEY_HARVESTING_GUIDE.md  TEXT_MESSAGE_COMPLETE_GUIDE.md  tdeck_port_guide.md
docs/: ANALYSIS_REPORT_2025-11-23.md  API.md  ATTACKER.md  BUILDING.md  BUILD_GUIDE.md  BUTTON_DISPLAY_GUIDE.md  CODE_REVIEW_2026-02-18.md  CONFERENCE_DEMO.md  CURRENT_STATUS_JAN2025.md  DEBUG_HANDOFF_2024-12-30.md  DECRYPTION_SUCCESS.md  DOCUMENTATION_UPDATE_SUMMARY.md  DUAL_BOARD_ARCHITECTURE.md  SETUP.md  (+41 more)
(+294 files in other folders)
