[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "lorarecon"
version = "0.1.0"
description = "ESP32 LoRa Sniffer analysis toolkit"
requires-python = ">=3.10"
dependencies = [
    "esptool>=4.0.0",
    "matplotlib>=3.5.0",
    "networkx>=3.0",
    "folium>=0.14.0",
    "requests>=2.28.0",
    "websocket-client>=1.4.0",
    "rich>=13.0.0",
    "cryptography>=41.0.0",
]

[project.scripts]
lorarecon = "tools.sniffer:main"

[tool.setuptools.packages.find]
include = ["tools*"]
